--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id="encabezado">
         
-       <h1 class="logo"><a href="index.html" class="portafolio">portafolio</a></h1>
+       <h1 class="logo"><a href="portafolio" class="portafolio">portafolio</a></h1>
         <div class="menu">
             <nav>
                 <input type="checkbox" id="check" />
