--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id="encabezado">
         
-       <h1 class="logo"><a href="portafolio" class="portafolio">portafolio</a></h1>
+       <h1 class="logo"><a href="index.html" class="portafolio">portafolio</a></h1>
         <div class="menu">
             <nav>
                 <input type="checkbox" id="check" />
@@ -24,7 +24,7 @@
                 </label>
 
                 <ul class="menu">
-                    <li><a href="inicio">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="acerca de mi">Acerca de mi</a></li>
                     <li><a href="Proyectos">Proyectos</a></li>
                     <li><a href="Contacto">Contacto</a></li>
